# QML

ICE_CIRCULAR/: CMakeLists.txt
ICE_CIRCULAR/ICE_gauge/: CMakeLists.txt  assets.qrc  main.qml
ICE_CIRCULAR/ICE_gauge/images/: assets.qrc  main.qml
ICE_CIRCULAR/ICE_gauge/inc/: gauge_design.h
ICE_CIRCULAR/ICE_gauge/src/: gauge_design.cpp
ICE_CIRCULAR/src/: DevAppMain.cpp
